projects/live-preview/components/si-live-preview/si-live-preview-codeflask.scss
@use '../../styles/variables';
@use '@siemens/element-theme/src/styles/variables' as element-vars;

// Codeflask/prism theme using Element Design System tokens
// Automatically adapts to light and dark themes
// Token mapping matches markdown syntax highlighting:
// - Default text: element-text-primary
// - Keywords: element-data-purple-2
// - Operators: element-data-plum-2
// - Variables: element-data-6
// - Functions: element-text-caution
// - Strings: element-text-warning
// - Numbers: element-text-success
// - Constants: element-data-13
// - Comments: element-data-green-3
// - Punctuation: element-data-17
// - Tags: element-data-5
// - Types: element-data-4
// - Invalid: element-data-10

// stylelint-disable selector-class-pattern

$default: element-vars.$element-text-primary;
$background: variables.$live-preview-editor-background-color;
$background-readonly: variables.$live-preview-editor-background-color;
$purple: element-vars.$element-data-purple-2;
$caution: element-vars.$element-text-caution;
$warning: element-vars.$element-text-warning;
$success: element-vars.$element-text-success;
$data-5: element-vars.$element-data-5;
$data-6: element-vars.$element-data-6;
$data-4: element-vars.$element-data-4;
$data-13: element-vars.$element-data-13;
$data-10: element-vars.$element-data-10;
$data-plum-2: element-vars.$element-data-plum-2;
$comment: element-vars.$element-data-green-3;
$punctuation: element-vars.$element-data-17;
$lines-color: element-vars.$element-text-disabled;
$lines-background: element-vars.$element-base-4;

:host ::ng-deep {
  .readonly .codeflask {
    background-color: $background-readonly;
  }

  .codeflask {
    background-color: $background;

    pre,
    code {
      color: $default;
      background: none;
      border: 0;
      border-radius: 0;
      text-align: start;
      white-space: pre;
      word-spacing: normal;
      word-break: normal;
      word-wrap: normal;
      tab-size: 2;
      hyphens: none;
    }

    .codeflask__flatten,
    .codeflask__code {
      font-family: variables.$font-family-monospace;
    }

    // this fixes rendering problem during scrolling
    .codeflask__flatten {
      min-inline-size: calc(100% - 40px);
      inline-size: auto;
    }

    .codeflask__pre {
      z-index: 0;
    }

    .codeflask__textarea {
      z-index: 1;
      color: transparent;
      caret-color: $default;
    }

    &.codeflask--has-line-numbers::before {
      background: $lines-background;
    }
  }

  .codeflask__lines {
    color: $lines-color;
  }

  .namespace {
    opacity: 0.7;
  }

  .token {
    // Comments
    &.comment,
    &.prolog,
    &.doctype,
    &.cdata {
      color: $comment;
      font-style: italic;
    }

    // Punctuation
    &.punctuation {
      color: $punctuation;
    }

    // Constants and keywords
    &.constant,
    &.symbol,
    &.keyword {
      color: $purple;
    }

    // Built-in functions
    &.builtin {
      color: $data-4;
    }

    // Properties
    &.property {
      color: $data-6;
    }

    // Tags (HTML/XML)
    &.tag {
      color: $data-5;
    }

    // Booleans
    &.boolean {
      color: $data-13;
    }

    // Numbers
    &.number {
      color: $success;
    }

    // Attribute names
    &.attr-name {
      color: $data-6;
    }

    // Attribute values
    &.attr-value {
      color: $warning;
    }

    // Strings
    &.string,
    &.char {
      color: $warning;
    }

    // Functions
    &.function {
      color: $caution;
    }

    // Class names and types
    &.class-name {
      color: $data-4;
    }

    // Variables, regex, important
    &.regex,
    &.important,
    &.variable {
      color: $data-6;
    }

    // Bold and important
    &.important,
    &.bold {
      font-weight: variables.$live-preview-font-weight-semibold;
    }

    // Italic
    &.italic {
      font-style: italic;
    }

    // Entity
    &.entity {
      cursor: help;
    }

    // Insertions (diffs)
    &.inserted {
      color: $comment;
    }

    // Deletions (diffs)
    &.deleted {
      color: $data-10;
    }
  }
}

